--- a/multiple_series.ipynb
+++ b/multiple_series.ipynb
@@ -2,88 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             Fecha Clave IBM                     Central Energético principal  \\\n",
-      "0       01.01.2013       PLD         C T Puerto Libertad                  CBO   \n",
-      "1       01.01.2013       PGD          C T  C Rodríguez R                  CBO   \n",
-      "2       01.01.2013       TPO             C T Topolobampo                  CBO   \n",
-      "3       01.01.2013       MZD           C T José Aceves P                  CBO   \n",
-      "4       01.01.2013       ICA               C T G Caborca                  DSL   \n",
-      "...            ...       ...                         ...                  ...   \n",
-      "261427  31.12.2018       SJC        CFE-TM27-2500-SJC-U1                  DSL   \n",
-      "261428  31.12.2018       GJD      GUERRERO NEGRO JET DOS                  DSL   \n",
-      "261429  31.12.2018       JSD        TJ SANTA ROSALIA DOS                  DSL   \n",
-      "261430  31.12.2018       NaN  CFE-UME-16 SRI (UNIDAD 20)                  DSL   \n",
-      "261431  31.12.2018       NaN  CFE-UME-16 SRI (UNIDAD 18)                  DSL   \n",
-      "\n",
-      "        Consumo CBO (M3)  Consumo CBO (GJ)  Consumo DSL (M3)  \\\n",
-      "0               1741.189         71705.341             0.544   \n",
-      "1                790.807         33314.786             0.000   \n",
-      "2               1025.620         42898.920             0.386   \n",
-      "3                599.022         24848.767             1.074   \n",
-      "4                  0.000             0.000             0.000   \n",
-      "...                  ...               ...               ...   \n",
-      "261427             0.000             0.000            31.984   \n",
-      "261428             0.000             0.000             0.000   \n",
-      "261429             0.000             0.000             0.000   \n",
-      "261430             0.000             0.000             0.000   \n",
-      "261431             0.000             0.000             0.000   \n",
-      "\n",
-      "        Consumo DSL (GJ)  Consumo total CA (Ton)  Consumo CAI (Ton)  \\\n",
-      "0                 21.052                     0.0                0.0   \n",
-      "1                  0.000                     0.0                0.0   \n",
-      "2                 15.146                     0.0                0.0   \n",
-      "3                 41.061                     0.0                0.0   \n",
-      "4                  0.000                     0.0                0.0   \n",
-      "...                  ...                     ...                ...   \n",
-      "261427          1119.315                     0.0                0.0   \n",
-      "261428             0.000                     0.0                0.0   \n",
-      "261429             0.000                     0.0                0.0   \n",
-      "261430             0.000                     0.0                0.0   \n",
-      "261431             0.000                     0.0                0.0   \n",
-      "\n",
-      "        Consumo CAD (Ton)  Consumo CAS (Ton)  Consumo total CA (GJ)  \\\n",
-      "0                     0.0                0.0                    0.0   \n",
-      "1                     0.0                0.0                    0.0   \n",
-      "2                     0.0                0.0                    0.0   \n",
-      "3                     0.0                0.0                    0.0   \n",
-      "4                     0.0                0.0                    0.0   \n",
-      "...                   ...                ...                    ...   \n",
-      "261427                0.0                0.0                    0.0   \n",
-      "261428                0.0                0.0                    0.0   \n",
-      "261429                0.0                0.0                    0.0   \n",
-      "261430                0.0                0.0                    0.0   \n",
-      "261431                0.0                0.0                    0.0   \n",
-      "\n",
-      "        Consumo CAI (GJ)  Consumo CAD (GJ)  Consumo CAS (GJ)  \n",
-      "0                    0.0               0.0               0.0  \n",
-      "1                    0.0               0.0               0.0  \n",
-      "2                    0.0               0.0               0.0  \n",
-      "3                    0.0               0.0               0.0  \n",
-      "4                    0.0               0.0               0.0  \n",
-      "...                  ...               ...               ...  \n",
-      "261427               0.0               0.0               0.0  \n",
-      "261428               0.0               0.0               0.0  \n",
-      "261429               0.0               0.0               0.0  \n",
-      "261430               0.0               0.0               0.0  \n",
-      "261431               0.0               0.0               0.0  \n",
-      "\n",
-      "[261432 rows x 16 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
     "\n",
     "# Directorio donde se encuentran los archivos Excel\n",
-    "directorio = 'Datos\\\\'\n",
+    "directorio = 'C:\\\\Datos\\\\'\n",
     "\n",
     "# Obtener la lista de archivos en el directorio\n",
     "archivos = os.listdir(directorio)\n",
@@ -105,7 +32,8 @@
     "df_final = pd.concat(dfs, ignore_index=True)\n",
     "\n",
     "# Mostrar el DataFrame final\n",
-    "print(df_final)\n"
+    "print(df_final)\n",
+    "df_final.to_csv('Datos\\\\datos.csv', index=False)"
    ]
   },
   {
